# semantic-release-pypi-pyproject

./: .releaserc.json  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
semantic_release_pypi_project/: __init__.py
