[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-release-pypi-pyproject"
version = "0.0.1"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.3"
authors = [
    { name = "abichinger", email = "andreas.bichinger@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/abichinger/semantic-release-pypi"

[tool.hatch.version]
path = "semantic_release_pypi_pyproject/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/semantic_release_pypi_pyproject",
]
